--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -4,6 +4,7 @@ services:
     build: .
     mem_limit: 512m
     environment:
+      - PASSENGER_MIN_INSTANCES=1
       - PASSENGER_MAX_POOL_SIZE=2
     labels:
       - convox.deployment.minimum=100
